[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["yossyhal.k <yossyhal.k@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.black]
line-length = 99

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
mypy = "^0.950"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
